# awesome-x402-on-base

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  claude.md
.agents/skills/check-contribution/: SKILL.md
.agents/skills/create-doc/: SKILL.md
.agents/skills/sync-docs/: SKILL.md
.agents/skills/validate-links/: SKILL.md
.cursor/rules/: rules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
docs/: README.en.md  README.md  getting_started.ko.md  getting_started.md  x402-v2-specification.ko.md  x402-v2-specification.md
docs/korean/: README.en.md  README.md  getting_started.ko.md  x402-v2-specification.ko.md
docs/korean/examples/: python-discovery.ko.md  python-fastapi-server.ko.md  python-httpx-client.ko.md  python-requests-client.ko.md
docs/korean/v1/: README.en.md  README.md
docs/korean/v2/: README.en.md  README.md
docs/python/: README.en.md  README.md
docs/python/v1/: README.en.md  README.md
docs/python/v2/: README.en.md  README.md
docs/typescript/: README.en.md  README.md
docs/typescript/v1/: README.en.md  (+1 more)
examples/: README.en.md  README.ko.md  README.md
examples/ap2-demo-coffee-shop/: .env.example  AGENTS.md  README.md  local_wallet.py  pyproject.toml
examples/v1/: README.en.md  README.ko.md  README.md
examples/v1/ap2-demo-coffee-shop/: README.en.md  README.md  pyproject.toml
examples/v1/ap2-demo-coffee-shop/client_agent/: agent.py
examples/v1/ap2-demo-coffee-shop/server/: __main__.py
examples/v2/: README.en.md  README.md
resources/: korean-community.md
(+108 files in other folders)
