[project]
name = "ap2-demo-coffee-shop"
version = "0.1.0"
description = "A coffee shop demo showcasing AP2 and x402 for agent-to-agent payments with customizable drink options."
requires-python = ">=3.13,<3.14"
dependencies = [
    "ap2 @ git+https://github.com/google-agentic-commerce/AP2.git@main",
    "x402-a2a",
    "starlette",
    "uvicorn",
    "pydantic",
    "eth-account",
    "web3",
    "httpx",
    "google-adk",
    "click",
    "flask",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server", "client_agent"]

[project.scripts]
server = "server.__main__:main"

[tool.uv.workspace]
members = []

[tool.uv.sources]
x402-a2a = {git = "https://github.com/google-agentic-commerce/a2a-x402", branch="main", subdirectory = "python/x402_a2a"}

[tool.ruff]
target-version = "py313"

[project.optional-dependencies]
lint = [
    "ruff>=0.13.1",
    "mypy>=1.18.0",
]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true

